force-app/main/default/objects/Survey__c/Survey__c.object-meta.xml
<CustomObject>
    <description>object to keep survey results of NPS questions</description>
    <label>Survey</label>
    <nameField>
        <displayFormat>S-{YYYY}-{MM}-{0000}</displayFormat>
        <label>Survey Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>