force-app/main/default/objects/Survey__c/fields/Additional_Feedback_10__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Feedback #10</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>