force-app/main/default/objects/Survey__c/fields/Additional_Feedback_11__c.field-meta.xml
<CustomField>
    <fullName>Additional_Feedback_11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Additional Feedback #11</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>