force-app/main/default/objects/Survey__c/fields/Answer11__c.field-meta.xml
<CustomField>
    <fullName>Answer11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer11</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>