force-app/main/default/objects/Survey__c/fields/Answer12__c.field-meta.xml
<CustomField>
    <fullName>Answer12__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer12</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>