force-app/main/default/objects/Survey__c/fields/Answer13__c.field-meta.xml
<CustomField>
    <fullName>Answer13__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Answer13</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>