force-app/main/default/objects/Survey__c/fields/Call_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Call_Date_Time__c</fullName>
    <description>Call date and time for the survey</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Call Date/Time</label>
    <type>DateTime</type>
</CustomField>