force-app/main/default/objects/Survey__c/fields/Customer_Segment_formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Segment_formula__c</fullName>
    <formula>Customer__r.Core_Banking_Suggested_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Segment</label>
    <type>Text</type>
</CustomField>