force-app/main/default/objects/Survey__c/fields/NPS_Question_3_Result__c.field-meta.xml
<CustomField>
    <fullName>NPS_Question_3_Result__c</fullName>
    <description>NPS Question #3 Result</description>
    <encryptionScheme>None</encryptionScheme>
    <label>NPS Question #3 Result</label>
    <length>255</length>
    <type>Text</type>
</CustomField>