force-app/main/default/objects/Survey__c/fields/Question10__c.field-meta.xml
<CustomField>
    <fullName>Question10__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question #10</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>