force-app/main/default/objects/Survey__c/fields/Question11__c.field-meta.xml
<CustomField>
    <fullName>Question11__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question #11</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>