force-app/main/default/objects/Survey__c/fields/Question14__c.field-meta.xml
<CustomField>
    <fullName>Question14__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Question #14</label>
    <length>1028</length>
    <type>LongTextArea</type>
</CustomField>