force-app/main/default/objects/Survey__c/fields/SurveyMaster__c.field-meta.xml
<CustomField>
    <fullName>SurveyMaster__c</fullName>
    <label>Master-Topic Question</label>
    <referenceTo>SurveyMaster__c</referenceTo>
    <relationshipLabel>Surveys</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>