force-app/main/default/objects/Survey__c/recordTypes/NPS_Survey.recordType-meta.xml
<RecordType>
    <fullName>NPS_Survey</fullName>
    <active>true</active>
    <description>Default layout for NPS Survey</description>
    <label>NPS Survey</label>
</RecordType>