force-app/main/default/objects/Survey__c/recordTypes/NPS_Survey_Complete.recordType-meta.xml
<RecordType>
    <fullName>NPS_Survey_Complete</fullName>
    <active>true</active>
    <description>NPS Survey Complete Layout</description>
    <label>NPS Survey Complete</label>
</RecordType>